--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.61'
-
-        appcompat_version = '1.1.0'
-        core_ktx_version = '1.2.0'
+        kotlin_version = '1.5.0'
+        appcompat_version = '1.3.0'
+        activity_ktx_version = '1.2.3'
+        core_ktx_version = '1.5.0'
         core_testing_version = '2.1.0'
-        constraintlayout_version = '1.1.3'
-        material_version = "1.1.0"
+        constraintlayout_version = '2.0.4'
+        material_version = '1.3.0'
         moshi_version = '1.8.0'
-        retrofit_version = '2.7.1'
+        retrofit_version = '2.9.0'
+        recycler_view = '1.2.1'
         okhttp_version = '4.3.1'
         picasso_version = '2.71828'
         circleimageview_version = '3.0.0'
@@ -24,8 +25,8 @@ buildscript {
 
         koin_version = "2.0.1"
         dagger_version = "2.23.2"
-        lifecycle_version = "2.2.0"
-        coroutines_version = "1.3.3"
+        lifecycle_version = "2.3.1"
+        coroutines_version = "1.4.1"
         rxjava_version = "2.2.17"
         rxandroid_version = "2.1.1"
         core_ktx_test_version = "1.2.0"
@@ -33,11 +34,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -47,8 +48,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
 }
 
